--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,20 @@
 Hello world!
-<button mat-flat-button>Basic</button>
+
 
 <h1>Judul Besar</h1>
 <p>Ini adalah paragraf teks dengan gaya tipografi bawaan Angular Material.</p>
+
+<div class="text-center mb-">
+</div>
+
+<div class="flex items-center py-5">
+  <h1 class="text-4xl font-bold text-blue-500">
+    Tailwind CSS with Angular!
+  </h1>
+  <p class="text-gray-700 mt-4">
+    Integrasi Tailwind CSS berhasil dilakukan.
+  </p>
+  <button mat-flat-button>Basic</button>
+</div>
 
 <router-outlet />
