--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,10 @@
-Hello world!
-
-
-<h1>Judul Besar</h1>
-<p>Ini adalah paragraf teks dengan gaya tipografi bawaan Angular Material.</p>
-
-<div class="text-center mb-">
-</div>
-
-<div class="flex items-center py-5">
-  <h1 class="text-4xl font-bold text-blue-500">
-    Tailwind CSS with Angular!
-  </h1>
-  <p class="text-gray-700 mt-4">
+<div class="flex flex-col items-center py-5">
+  <h1 [class]="hlmH1">Spartan + Tailwind CSS in Angular!</h1>
+  <p [class]="hlmP">
     Integrasi Tailwind CSS berhasil dilakukan.
   </p>
-  <button mat-flat-button>Basic</button>
+  <button hlmBtn>Button</button>
 </div>
 
+<carousel [items]="carouselItems"></carousel>
 <router-outlet />
