--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <!-- <app-navbar (changeColorTheme)="changeColorTheme($event)"></app-navbar> -->
 
 <!--Main Routing-->
-<main role="main" class="container border shadow-lg min-h-screen">
+<main role="main" class="container min-h-screen overflow-hidden">
   <router-outlet></router-outlet>
 </main>
 
