add component movie-carousel

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -5,7 +5,7 @@
 </div>
 
 <hlm-tabs id="trending" tab="today" class="w-full">
-  <div class="flex flex-row gap-6 items-start">
+  <div class="flex flex-row gap-6 items-start mb-4">
     <h3 [ngClass]="[hlmH3]">Trending</h3>
     <div>
       <hlm-tabs-list class="w-full grid grid-cols-2" aria-label="tabs trending">
@@ -14,96 +14,16 @@
       </hlm-tabs-list>
     </div>
   </div>
-  <div></div>
-  <div hlmTabsContent="today">
-    <div class="flex flex-row gap-4 items-center min-h-[200px]">
-      <hlm-carousel class="w-full" [options]="{ loop: true }">
-        <hlm-carousel-content>
-          @if (trendingMovies.loading) {
-          <hlm-carousel-item *ngFor="let skeleton of loadingSkeleton">
-            <hlm-skeleton class="h-[169px] w-[300px] rounded-lg" />
-          </hlm-carousel-item>
-          } @else {
-          <hlm-carousel-item
-            *ngFor="
-              let content of carouselItems;
-              index as i;
-              trackBy: trackByFn
-            "
-          >
-            <brn-hover-card>
-              <app-image
-                brnHoverCardTrigger
-                ngSrc="https://picsum.photos/300/169"
-                alt="Mountain views"
-                [width]="300"
-                [height]="169"
-                [aspectRatio]="16 / 9"
-                [prioritize]="true"
-                [customClass]="'rounded-lg'"
-              ></app-image>
-              <hlm-hover-card-content *brnHoverCardContent class="w-80">
-                <div class="flex justify-between space-x-4">
-                  <div class="space-y-1">
-                    <h4 class="text-sm font-semibold">&#64;analogjs {{ i }}</h4>
-                    <p class="text-sm">
-                      The Angular meta-framework – build Angular applications
-                      faster.
-                    </p>
-                    <div class="flex items-center pt-2">
-                      <ng-icon
-                        hlm
-                        size="sm"
-                        name="lucideCalendar"
-                        class="mr-2 opacity-70"
-                      />
-                      <span class="text-xs text-muted-foreground"
-                        >Joined December 2021</span
-                      >
-                    </div>
-                  </div>
-                </div>
-              </hlm-hover-card-content>
-            </brn-hover-card>
-          </hlm-carousel-item>
-          }
-        </hlm-carousel-content>
-        <button hlm-carousel-previous class=""></button>
-        <button hlm-carousel-next></button>
-        <hlm-carousel-shadow-before></hlm-carousel-shadow-before>
-        <hlm-carousel-shadow-after></hlm-carousel-shadow-after>
-      </hlm-carousel>
-    </div>
+  <div hlmTabsContent="today" class="min-h-[200px]">
+    <app-movie-carousel
+      [loading]="trendingMoviesDay.loading"
+      [movieData]="trendingMoviesDay.data"
+    ></app-movie-carousel>
   </div>
-  <div hlmTabsContent="week">
-    <div class="flex flex-row gap-4 items-center min-h-[200px]">
-      <hlm-carousel class="w-full" [options]="{ loop: true }">
-        <hlm-carousel-content>
-          @if (trendingMovies.loading) {
-          <hlm-carousel-item *ngFor="let skeleton of loadingSkeleton">
-            <hlm-skeleton class="h-[169px] w-[300px] rounded-lg" />
-          </hlm-carousel-item>
-          } @else {
-          <hlm-carousel-item
-            *ngFor="let content of carouselItems; trackBy: trackByFn"
-          >
-            <app-image
-              ngSrc="https://picsum.photos/300/169"
-              alt="Mountain views"
-              [width]="300"
-              [height]="169"
-              [aspectRatio]="16 / 9"
-              [prioritize]="true"
-              [customClass]="'rounded-lg'"
-            ></app-image>
-          </hlm-carousel-item>
-          }
-        </hlm-carousel-content>
-        <button hlm-carousel-previous class=""></button>
-        <button hlm-carousel-next></button>
-        <hlm-carousel-shadow-before></hlm-carousel-shadow-before>
-        <hlm-carousel-shadow-after></hlm-carousel-shadow-after>
-      </hlm-carousel>
-    </div>
+  <div hlmTabsContent="week" class="min-h-[200px]">
+    <app-movie-carousel
+      [loading]="trendingMoviesWeek.loading"
+      [movieData]="trendingMoviesWeek.data"
+    ></app-movie-carousel>
   </div>
 </hlm-tabs>
