--- a/src/app/shared/components/ui/image/image.component.html
+++ b/src/app/shared/components/ui/image/image.component.html
@@ -9,7 +9,11 @@
       [width]="width"
       [height]="height"
       [priority]="prioritize"
-      class="transition-transform duration-300 ease-in-out hover:scale-110"
+      [ngClass]="[
+        zoom
+          ? 'transition-transform duration-500 ease-in-out transform hover:scale-110'
+          : ''
+      ]"
     />
   </div>
 </figure>
