--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,28 +4,64 @@
   <button hlmBtn>Button</button>
 </div>
 
-<hlm-tabs id="trending" tab="today" class="w-full">
-  <div class="flex flex-row gap-6 items-start mb-4">
-    <h3 [ngClass]="[hlmH3]">Trending</h3>
-    <div>
-      <hlm-tabs-list class="w-full grid grid-cols-2" aria-label="tabs trending">
-        <button hlmTabsTrigger="today">Today</button>
-        <button hlmTabsTrigger="week" (click)="_handleTrendingWeek()">
-          This Week
-        </button>
-      </hlm-tabs-list>
+<section id="trending" class="mb-20">
+  <hlm-tabs tab="today" class="w-full">
+    <div class="flex flex-row gap-6 items-start mb-4">
+      <h3 [ngClass]="[hlmH3]">Trending</h3>
+      <div>
+        <hlm-tabs-list
+          class="w-full grid grid-cols-2"
+          aria-label="tabs trending"
+        >
+          <button hlmTabsTrigger="today">Today</button>
+          <button hlmTabsTrigger="week" (click)="_handleTrendingWeek()">
+            This Week
+          </button>
+        </hlm-tabs-list>
+      </div>
     </div>
-  </div>
-  <div hlmTabsContent="today" class="min-h-[200px]">
-    <app-movie-carousel
-      [loading]="trendingMoviesDay.loading"
-      [movieData]="trendingMoviesDay.data"
-    ></app-movie-carousel>
-  </div>
-  <div hlmTabsContent="week" class="min-h-[200px]">
-    <app-movie-carousel
-      [loading]="trendingMoviesWeek.loading"
-      [movieData]="trendingMoviesWeek.data"
-    ></app-movie-carousel>
-  </div>
-</hlm-tabs>
+    <div hlmTabsContent="today" class="min-h-[200px]">
+      <app-movie-carousel
+        [loading]="trendingMoviesDay.loading"
+        [movieData]="trendingMoviesDay.data"
+      ></app-movie-carousel>
+    </div>
+    <div hlmTabsContent="week" class="min-h-[200px]">
+      <app-movie-carousel
+        [loading]="trendingMoviesWeek.loading"
+        [movieData]="trendingMoviesWeek.data"
+      ></app-movie-carousel>
+    </div>
+  </hlm-tabs>
+</section>
+
+<section id="popular" class="mb-20">
+  <hlm-tabs tab="movie" class="w-full">
+    <div class="flex flex-row gap-6 items-start mb-4">
+      <h3 [ngClass]="[hlmH3]">What's Popular</h3>
+      <div>
+        <hlm-tabs-list
+          class="w-full grid grid-cols-2"
+          aria-label="tabs trending"
+        >
+          <button hlmTabsTrigger="movie">Movie</button>
+          <button hlmTabsTrigger="tv" (click)="_handlePopularTv()">
+            TV Show
+          </button>
+        </hlm-tabs-list>
+      </div>
+    </div>
+    <div hlmTabsContent="movie" class="min-h-[200px]">
+      <app-movie-carousel
+        [loading]="popularMovies.loading"
+        [movieData]="popularMovies.data"
+      ></app-movie-carousel>
+    </div>
+    <div hlmTabsContent="tv" class="min-h-[200px]">
+      <app-movie-carousel
+        [loading]="popularTv.loading"
+        [movieData]="popularTv.data"
+      ></app-movie-carousel>
+    </div>
+  </hlm-tabs>
+</section>
