--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -6,7 +6,9 @@
 
 <section id="trending" class="mb-20">
   <hlm-tabs tab="today" class="w-full">
-    <div class="flex flex-row gap-6 items-start mb-4">
+    <div
+      class="flex flex-row gap-6 items-center md:items-start justify-between md:justify-start mb-4"
+    >
       <h3 [ngClass]="[hlmH3]">Trending</h3>
       <div>
         <hlm-tabs-list
@@ -37,7 +39,9 @@
 
 <section id="popular" class="mb-20">
   <hlm-tabs tab="movie" class="w-full">
-    <div class="flex flex-row gap-6 items-start mb-4">
+    <div
+      class="flex flex-row gap-6 items-center md:items-start justify-between md:justify-start mb-4"
+    >
       <h3 [ngClass]="[hlmH3]">What's Popular</h3>
       <div>
         <hlm-tabs-list
