--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,10 +1,33 @@
-<div class="flex flex-col items-center py-5">
-  <h1 [class]="hlmH1">Spartan + Tailwind CSS in Angular!</h1>
-  <p [class]="hlmP">Tailwind CSS successfully integrated.</p>
-  <button hlmBtn>Button</button>
-</div>
+<section id="hero" class="relative flex w-full h-[400px] overflow-hidden mb-16">
+  <app-image
+    [class]="'absolute -translate-y-1/2 w-full h-full'"
+    [ngSrc]="'/images/hero-image.jpg'"
+    [alt]="'image'"
+    [width]="1472"
+    [height]="828"
+    [aspectRatio]="16 / 9"
+    [prioritize]="true"
+  ></app-image>
+  <div class="absolute w-full h-full bg-background opacity-75"></div>
+  <div
+    class="absolute w-full h-full flex flex-col items-center justify-center gap-2 lg:gap-4 text-center"
+  >
+    <h1
+      [ngClass]="[
+        hlmH1,
+        'bg-gradient-to-r from-pink-600 to-purple-500 inline-block text-transparent bg-clip-text sm:!leading-[60px] lg:!leading-[65px]'
+      ]"
+    >
+      Angular & Tailwind + Sparntan
+    </h1>
+    <p [ngClass]="'text-base px-5 md:text-xl mb-4'">
+      The Movie App created with Angular and style with Tailwind + Sparntan
+    </p>
+    <button hlmBtn>Button</button>
+  </div>
+</section>
 
-<section id="trending" class="mb-20">
+<section id="trending" class="mb-16">
   <hlm-tabs tab="today" class="w-full">
     <div
       class="flex flex-row gap-6 items-center md:items-start justify-between md:justify-start mb-4"
@@ -37,7 +60,7 @@
   </hlm-tabs>
 </section>
 
-<section id="popular" class="mb-20">
+<section id="popular" class="mb-16">
   <hlm-tabs tab="movie" class="w-full">
     <div
       class="flex flex-row gap-6 items-center md:items-start justify-between md:justify-start mb-4"
