update styles and enhance image component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--Desktop Navbar-->
-<nav class="sticky top-0 z-50 bg-slate-900 shadow-md">
+<nav class="fixed w-full top-0 z-50 shadow-md">
   <div class="container mx-auto px-6 py-5 flex items-center justify-between">
     <div class="font-extrabold text-2xl lg:text-2xl scroll-m-20 tracking-tight">
       <a href="/">Ng-Movie</a>
@@ -14,7 +14,7 @@
 </nav>
 
 <!--Main Routing-->
-<main role="main" class="container min-h-screen overflow-hidden py-4">
+<main role="main" class="min-h-screen pb-4">
   <router-outlet></router-outlet>
 </main>
 
