--- a/src/app/shared/components/fragment/movie-carousel/movie-carousel.component.html
+++ b/src/app/shared/components/fragment/movie-carousel/movie-carousel.component.html
@@ -14,7 +14,7 @@
           [width]="355"
           [height]="200"
           [aspectRatio]="16 / 9"
-          [customClass]="'rounded-lg overflow-hidden hover:cursor-pointer'"
+          class="rounded-lg overflow-hidden hover:cursor-pointer"
         ></app-image>
         <hlm-hover-card-content
           *brnHoverCardContent
