--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,4 @@
-<!--Desktop Navbar-->
-<nav class="fixed w-full top-0 z-50 shadow-md">
-  <div class="container mx-auto px-6 py-5 flex items-center justify-between">
-    <div class="font-extrabold text-2xl lg:text-2xl scroll-m-20 tracking-tight">
-      <a href="/">Ng-Movie</a>
-    </div>
-    <div>
-      <a href="#" class="text-sm font-bold p-4">Home</a>
-      <a href="#" class="text-sm font-bold p-4">Movies</a>
-      <a href="#" class="text-sm font-bold p-4">TV Shows</a>
-      <a href="#" class="text-sm font-bold p-4">People</a>
-    </div>
-  </div>
-</nav>
+<app-header></app-header>
 
 <!--Main Routing-->
 <main role="main" class="min-h-screen pb-4">
