--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -8,7 +8,9 @@
       [fill]="true"
     ></app-image>
   </div>
-  <div class="absolute w-full h-full bg-background opacity-75"></div>
+  <div
+    class="absolute w-full h-full bg-gradient-to-b from-background/50 to-95% to-background"
+  ></div>
   <div
     class="absolute w-full h-full flex flex-col items-center justify-center gap-2 lg:gap-4 text-center"
   >
