--- a/src/app/shared/components/fragment/movie-carousel/movie-carousel.component.html
+++ b/src/app/shared/components/fragment/movie-carousel/movie-carousel.component.html
@@ -9,7 +9,7 @@
       <brn-hover-card>
         <app-image
           brnHoverCardTrigger
-          [ngSrc]="movieImage + 'w355_and_h200_face' + movie.backdrop_path"
+          [ngSrc]="movieUrl + 'w355_and_h200_face' + movie.backdrop_path"
           [alt]="movie.title"
           [width]="355"
           [height]="200"
@@ -22,7 +22,7 @@
         >
           <div class="-mt-4 -ml-4 -mb-4">
             <app-image
-              [ngSrc]="movieImage + 'w220_and_h330_face' + movie.poster_path"
+              [ngSrc]="movieUrl + 'w220_and_h330_bestv2' + movie.poster_path"
               [alt]="'test'"
               [width]="167"
               [height]="250"
