--- a/src/app/shared/components/fragment/header/header.component.html
+++ b/src/app/shared/components/fragment/header/header.component.html
@@ -6,7 +6,9 @@
   class="fixed z-50 top-0 left-0 w-full transition-colors duration-300"
 >
   <div class="container mx-auto px-6 py-5 flex items-center justify-between">
-    <div class="font-extrabold text-2xl lg:text-2xl scroll-m-20 tracking-tight">
+    <div
+      class="font-extrabold text-2xl lg:text-2xl scroll-m-20 tracking-tight text-primary"
+    >
       <a href="/">Ng-Movie</a>
     </div>
     <div class="hidden md:block">
