--- a/src/app/shared/components/fragment/header/header.component.html
+++ b/src/app/shared/components/fragment/header/header.component.html
@@ -11,11 +11,11 @@
     >
       <a href="/">Ng-Movie</a>
     </div>
-    <div class="hidden md:block">
+    <!-- <div class="hidden md:block">
       <a href="#" class="text-sm font-bold p-4">Home</a>
       <a href="#" class="text-sm font-bold p-4">Movies</a>
       <a href="#" class="text-sm font-bold p-4">TV Shows</a>
       <a href="#" class="text-sm font-bold p-4">People</a>
-    </div>
+    </div> -->
   </div>
 </header>
