--- a/src/app/shared/components/fragment/movie-carousel/movie-carousel.component.html
+++ b/src/app/shared/components/fragment/movie-carousel/movie-carousel.component.html
@@ -32,6 +32,7 @@
           </div>
           <div class="ml-4 flex flex-col gap-2">
             <a
+              href="/detail/{{ movie.id }}"
               class="hover:text-red-500 hover:cursor-pointer font-bold md:text-xl line-clamp-2"
             >
               {{ movie.title }}
