--- a/src/app/pages/detail/detail.component.html
+++ b/src/app/pages/detail/detail.component.html
@@ -1,13 +1,21 @@
+<!-- FETCH SUCCESS -->
+@if (!!movieDetail.title) {
 <section
   class="relative h-content bg-cover bg-right min-h-[600px] pt-28 pb-6 mb-20"
-  [ngStyle]="{ 'background-image': 'url(' + backdropUrl + ')' }"
+  [ngStyle]="
+    movieDetailLoading ? {} : { 'background-image': 'url(' + backdropUrl + ')' }
+  "
 >
   <div
     class="absolute top-0 w-full h-full bg-gradient-to-b from-background/75 to-95% to-background"
   ></div>
   <div class="container relative z-10 w-full h-full flex flex-row">
     <div class="hidden sm:block">
+      @if (movieDetailLoading) {
+      <hlm-skeleton class="w-[300px] h-[450px] rounded-lg" />
+      } @else {
       <app-image
+        class="rounded-lg"
         [ngSrc]="movieUrl + 'w300_and_h450_bestv2' + movieDetail.poster_path"
         [alt]="'image'"
         [width]="300"
@@ -15,8 +23,20 @@
         [aspectRatio]="3 / 2"
         [prioritize]="true"
       ></app-image>
+      }
     </div>
     <div class="pl-10 pt-5">
+      @if(movieDetailLoading) {
+      <hlm-skeleton class="w-[200px] h-[20px] mb-2" />
+      <div class="flex flex-row gap-4 mb-6">
+        <hlm-skeleton class="w-[10px] h-[28px]" />
+        <hlm-skeleton class="w-[10px] h-[28px]" />
+      </div>
+      <hlm-skeleton class="w-[200px] h-[20px]" />
+      <hlm-skeleton class="w-[300px] h-[20px]" />
+      <hlm-skeleton class="w-[250px] h-[20px]" />
+      <hlm-skeleton class="w-[200px] h-[20px]" />
+      } @else {
       <h1 [ngClass]="[hlmH1, 'mb-2']">
         {{ movieDetail.title }}
       </h1>
@@ -71,10 +91,11 @@
           </ng-container>
         </div>
       </div>
+      }
     </div>
   </div>
 </section>
 
 @defer {
 <app-recommendation></app-recommendation>
-}
+} }
