enhance carousel CLS and image placeholder

--- a/src/app/shared/components/fragment/movie-carousel/movie-carousel.component.html
+++ b/src/app/shared/components/fragment/movie-carousel/movie-carousel.component.html
@@ -1,4 +1,4 @@
-<hlm-carousel class="w-full" [options]="{ loop: true }">
+<hlm-carousel class="w-full" [options]="{ loop: true, align: 'start' }">
   <hlm-carousel-content>
     @if (loading) {
     <hlm-carousel-item *ngFor="let skeleton of loadingSkeleton">
