--- a/src/app/shared/components/fragment/movie-carousel/movie-carousel.component.html
+++ b/src/app/shared/components/fragment/movie-carousel/movie-carousel.component.html
@@ -30,7 +30,7 @@
               class=""
             ></app-image>
           </div>
-          <div class="ml-4 flex flex-col gap-2">
+          <div class="ml-4 space-y-2">
             <a
               href="/detail/{{ movie.id }}"
               class="hover:text-red-500 hover:cursor-pointer font-bold md:text-xl line-clamp-2"
