fix label what popular

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -69,7 +69,7 @@
 </section>
 
 <section id="popular" class="mb-16 container overflow-hidden">
-  <h3 [ngClass]="[hlmH3]">What's Popular</h3>
+  <h3 [ngClass]="[hlmH3, 'mb-4']">What's Popular</h3>
   <app-movie-carousel
     [loading]="popularMovies.loading"
     [movieData]="popularMovies.data"
