add movies by genre in home page

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -83,3 +83,7 @@
     [movieData]="nowPlayingMovies.data"
   ></app-movie-carousel>
 </section>
+
+@defer{
+<app-movies-by-genre></app-movies-by-genre>
+}
